# tennis_center_management_system

./: .dockerignore  .env.example  .env_example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  pytest.ini  requirements.txt
alembic/: env.py
alembic/versions/: 2026_03_10_0431-c1cff6cc247d_initial.py
app/config/: settings.py
migrations/: env.py
migrations/versions/: 2025_09_18-69c277d189b2_initial.py  2025_09_22-beb08a62fc43_initial.py
src/: __init__.py  database.py  main.py  router.py
src/api/health/: __init__.py  router.py
src/api/user/: __init__.py  dependencies.py  repository.py  router.py  service.py
src/api/v1/: __init__.py
src/api/v1/health/: router.py  schemas.py
src/api/v1/user/: dependencies.py  router.py  schemas.py  service.py
src/application/use_cases/health/: dto.py  health_check.py
src/apps/: __init__.py
src/apps/user/: admin.py  urls.py
src/apps/user/api/serializers/: user.py
src/apps/user/api/views/: user.py
src/apps/user/migrations/: 0001_initial.py
src/apps/user/models/: __init__.py  user.py
src/apps/users/: admin.py  urls.py
src/apps/users/api/serializers/: __init__.py  user.py
src/apps/users/api/views/: __init__.py  user.py
src/apps/users/migrations/: 0001_initial.py
src/apps/users/models/: choices.py  managers.py  user.py
src/common/: __init__.py  dependencies.py  exceptions.py  mixins.py  models.py  repository.py  schemas.py
src/config/: asgi.py  settings.py  urls.py  wsgi.py
src/core/: __init__.py  config.py  registrar.py  swagger_config.py
src/domain/: enums.py
src/domain/interfaces/: health_checker.py
src/entrypoints/api/: openapi.py  registrar.py  router.py
src/entrypoints/api/health/: router.py  schemas.py
src/infra/: health_checkers.py
src/infra/di/: health_checkers.py  postgres.py  settings.py  use_cases.py
src/infra/postgres/models/: __init__.py  base.py  users.py
src/models/: __init__.py  administrator.py  enums.py  user.py
tests/: __init__.py  conftest.py  utils.py
tests/core/: config.py  faker.py  urls_config.py
tests/factories/: __init__.py  user.py
tests/factories/user/: __init__.py  user.py
tests/factories/users/: __init__.py  user.py
tests/helpers/: __init__.py  health.py  user.py
tests/helpers/user/: __init__.py  user.py
tests/helpers/users/: __init__.py  user.py
tests/tests_api/: __init__.py
tests/tests_api/tests_health/: __init__.py  test_healt_api.py
tests/tests_api/tests_user/: __init__.py  conftest.py  test_user_api.py
tests/tests_api/user/: __init__.py  conftest.py  test_user_api.py
tests/tests_api/users/: __init__.py  conftest.py  test_user_api.py
tests/tests_models/: __init__.py
tests/tests_models/user/: __init__.py
tests/tests_models/users/: __init__.py  test_user_model.py
