[project]
name = "tcms"
version = "0.1.0"
description = "Management system for tennis sports center"

dependencies = [
    "fastapi~=0.116.2",
    "pydantic-settings~=2.10.1",
    "SQLAlchemy~=2.0.43",
    "asyncpg~=0.30.0",
    "uvicorn~=0.35.0",
    "pre-commit~=4.3.0",
    "alembic~=1.16.5",
    "phonenumbers~=9.0.14",
    "email-validator~=2.3.0",
    "httpx>=0.28.1",
    "pytest-asyncio~=1.2.0",
    "factory-boy~=3.3.3",
    "faker-enum~=0.0.2",
]

# конфиги RUFF
[tool.ruff]
line-length = 79
show-fixes = true

extend-exclude =[
    "alembic",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "B",    # flake8-bugbear
    "I",    # isort
    "ICN",  # flake8-import-conventions
    "PGH",  # pygrep-hooks
    "PIE",  # flake8-pie
    "PT",   # flake8-pytest-style
    "RET",  # flake8-return
    "T20",  # flake8-print
    "UP",   # pyupgrade
    "YTT",  # flake8-2020
]

[tool.ruff.format]
quote-style = "single"
